<resources>
    <string name="app_name">Dashbord Penelitian dan Pengabdian</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_history">Riwayat Capaian Berkarya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chart">chart</string>
    <string name="chart_image">Chart Image</string>
    <string name="fakultas">Fakultas</string>
    <string name="department">Department</string>
    <string name="lihat_detail">Lihat detail</string>
    <string name="icon">icon</string>
    <string name="tahun">Tahun</string>
    <string name="jumlah_penelitian">Jumlah Penelitian</string>
    <string name="nama_fakultas">Nama Fakultas</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="penelitian">Penelitian</string>
    <string name="penelitian_grup_riset">Penelitian Grup Riset</string>
    <string name="jumlah_penelitian_grup_riset">Jumlah Penelitian Grup riset</string>
    <string name="hibah_pengabdian">Hibah Pengabdian</string>
    <string name="riwayat_capaian_berkarya">Riwayat Capaian Berkarya</string>
    <string name="rekap">Rekap</string>
    <string name="sumber_biaya">Sumber Biaya</string>
    <string name="prosiding">Prosiding</string>
    <string name="haki">Haki</string>
    <string name="program_kerja">Program Kerja</string>
    <string name="koran">Koran</string>
    <string name="keynote_speaker">Keynote Speaker</string>
    <string name="reviewer">Reviewer</string>
    <string name="statistik_aktivitas_nhibah_pengabdian">deskripsi_aplikasi\n</string>
    <string name="deskripsi_aplikasi">Selamat datang di Dashboard Penelitian dan Pengabdian! Halaman ini dirancang untuk memberikan Anda gambaran menyeluruh tentang berbagai aktivitas penelitian dan pengabdian yang sedang berlangsung serta yang direncanakan. Di halaman ini, Anda akan menemukan ringkasan dari kegiatan penelitian dan pengabdian dalam berbagai kategori. Informasi ini disajikan dalam bentuk statistik tahunan yang memudahkan Anda melihat perkembangan dari tahun ke tahun. Selain itu, halaman ini juga menampilkan grafik interaktif dan visualisasi data yang membantu Anda memahami tren dan pencapaian di bidang penelitian dan pengabdian. </string>
</resources>