<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/first_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
    </group>

    <group android:id="@+id/second_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activity"
            android:title="@string/aktivitas"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_penelitian"
            android:icon="@drawable/baseline_book_24"
            android:title="@string/penelitian"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_penelitian_grup_riset"
            android:icon="@drawable/ic_book_5"
            android:title="@string/penelitian_grup_riset"
            android:checkable="true" />

        <item
            android:id="@+id/nav_hibah_pengabdian"
            android:icon="@drawable/ic_selector_lightbulb"
            android:title="@string/hibah_pengabdian"
            android:checkable="true" />
    </group>
    <group android:id="@+id/third_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_riwayat"
            android:title="@string/riwayat_capaian_berkarya"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_rekap"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/rekap"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_sumber_biaya"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/sumber_biaya"
            android:checkable="true" />

        <item
            android:id="@+id/nav_prosiding"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/prosiding"
            android:checkable="true" />

        <item
            android:id="@+id/nav_haki"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/haki"
            android:checkable="true" />

        <item
            android:id="@+id/nav_program_kerja"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/program_kerja"
            android:checkable="true" />

        <item
            android:id="@+id/nav_koran"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/koran"
            android:checkable="true" />

        <item
            android:id="@+id/nav_keynote_speaker"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/keynote_speaker"
            android:checkable="true" />

        <item
            android:id="@+id/nav_reviewer"
            android:icon="@drawable/ic_selector_circle"
            android:title="@string/reviewer"
            android:checkable="true" />
    </group>
</menu>